# akura

./: .gitignore  .gitmodules  Anchor.toml  Cargo.toml  README.md  copyIdl.js  package.json  setup.sh  userAddress.json
app/: addresses.js  localAccounts.json  next.config.js  package.json
app/components/: Navbar.js  send.js
app/pages/: _app.js  browse.js  create.js  funds.js  index.js
app/pages/fund/: [fundId].js
app/public/: idl.json
app/public/prices/: mango-prices.json  orca-prices.json  raydium-prices.json  serum-prices.json  solana-prices.json  solice-prices.json  staratlas-prices.json
app/styles/: globals.css
app/utils/: index.js
programs/akura/: Cargo.toml
programs/akura/src/: account.rs  context.rs  error.rs  errors.rs  lib.rs  macros.rs  utils.rs
tests/: akura.ts  devnet.ts
tests/serumUtils/: index.js
tests/utils/: index.ts
