[package]
name = "akura"
version = "0.1.0"
description = "Protocol for index & actively managed funds on Solana."
edition = "2021"
repository = "https://github.com/udbhav1/akura"

[lib]
crate-type = ["cdylib", "lib"]
name = "akura"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = {version = "0.20.1"}
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
spl-associated-token-account = "1.0.3"